# hadrian

./: .env.example  .gitignore  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  TODO.md  TODO_TABLE.md  deny.toml  justfile
.cargo/: audit.toml
.github/workflows/: ci.yml  deploy-wasm.yml  docs.yml  helm.yml  release.yml
.greptile/: config.json
agent_instructions/: adding_admin_endpoint.md  adding_frontend_tool.md  adding_provider.md  architecture.md  ci_cd.md  configuration.md  containers.md  database_changes.md  documentation.md  frontend_conventions.md  key_files.md  modifying_chat_ui.md  responses_pipeline.md  testing.md  wasm.md
deploy/: .env.example  README.md  docker-compose.dlq.yml  docker-compose.keycloak.yml  docker-compose.observability.yml  docker-compose.postgres-ha.yml  docker-compose.postgres.yml  docker-compose.production.yml  docker-compose.provider-health.yml  docker-compose.redis-cluster.yml  docker-compose.saml.yml  docker-compose.sqlite-redis.yml  docker-compose.sqlite.yml  docker-compose.traefik.yml  docker-compose.university.yml  docker-compose.vault.yml  test-saml-browser.py
deploy/config/: alertmanager.yml  hadrian.dlq.toml  hadrian.keycloak.toml  hadrian.observability.toml  hadrian.postgres-ha.toml  hadrian.postgres.toml  hadrian.production.toml  hadrian.provider-health.toml  hadrian.redis-cluster.toml  hadrian.saml.toml  hadrian.sqlite-redis.toml  hadrian.sqlite.toml  hadrian.studio-models.toml  hadrian.traefik.toml  hadrian.university.toml  loki.yaml  otel-collector.yaml  prometheus-alerts.yml  prometheus-provider-health.yml  prometheus.yml  promtail.yaml  redis-cluster.conf
deploy/scripts/: postgres-primary-init.sh  postgres-replica-entrypoint.sh
deploy/tests/: PLAN_provider_health_dashboard_tests.md  README.md  eslint.config.js  openapi-ts.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  vitest.workspace.ts
docs/: .gitignore  .prettierignore  eslint.config.mjs  mdx-components.tsx  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
docs/app/: global.css  layout.tsx
docs/components/: api-page.client.tsx  gateway-diagram.tsx  provider.tsx  quick-start-selector.tsx  routing-diagram.tsx  search.tsx  story-embed.tsx
docs/lib/: layout.shared.tsx  openapi.ts
docs/public/: config-schema.json  storybook
docs/scripts/: generate-openapi-docs.ts
helm/hadrian/: .helmignore  Chart.yaml  README.md  values.schema.json  values.yaml
migrations_sqlx/postgres/: 20250101000000_initial.sql
migrations_sqlx/sqlite/: 20250101000000_initial.sql
openapi/: README.md  hadrian.openapi.json
scripts/: build-wasm.sh  ci-backend.sh  ci-frontend.sh  ci-helm.sh  ci.sh  coverage.sh  fetch-model-catalog.sh  fetch-openapi-specs.sh  generate-openapi.sh  generate-schema.sh  openapi-conformance.py  test-knowledge-bases.py  test_openapi_conformance.py
src/: app.rs  compat.rs  init.rs  lib.rs  main.rs  ontology.rs  openapi.rs  usage_buffer.rs  usage_sink.rs  wasm.rs  wizard.rs
src/api_types/: audio.rs  chat_completion.rs  completions.rs  embeddings.rs  images.rs  mod.rs  responses.rs
src/auth/: discovery.rs  error.rs  gateway_jwt.rs  identity.rs  jwt.rs  mod.rs  oidc.rs  principal.rs  registry.rs  saml.rs  saml_registry.rs  session_store.rs
src/authz/: engine.rs  error.rs  mod.rs  registry.rs
src/cache/: embedding_service.rs  error.rs  keys.rs  memory.rs  mod.rs  redis.rs  response_cache.rs  semantic_cache.rs  traits.rs
src/catalog/: mod.rs  registry.rs  types.rs
src/cli/: bootstrap.rs  container.rs  features.rs  healthcheck.rs  init.rs  migrate.rs  mod.rs  openapi.rs  server.rs  worker.rs
src/config/: auth.rs  cache.rs  database.rs  docs.rs  features.rs  limits.rs  mod.rs  observability.rs  providers.rs  retention.rs  runtimes.rs  secrets.rs  server.rs  sovereignty.rs  storage.rs  ui.rs
src/db/: error.rs  mod.rs
src/dlq/: database.rs  error.rs  file.rs  mod.rs  redis.rs  traits.rs  worker.rs
src/events/: mod.rs
src/guardrails/: audit.rs  azure.rs  bedrock.rs  blocklist.rs  content_limits.rs  custom.rs  error.rs  evaluator.rs  mod.rs  openai.rs  pii_regex.rs  retry.rs  streaming.rs  types.rs
src/jobs/: background_responses.rs  containers_cleanup.rs  containers_reaper.rs  leader_lock.rs  mod.rs  model_catalog_sync.rs  oauth_code_cleanup.rs  provider_health_check.rs  responses_cancel_poller.rs  responses_retention.rs  vector_store_cleanup.rs
src/middleware/: admin.rs  authz.rs  combined.rs  file_search.rs  mod.rs  rate_limit.rs  scope.rs  security_headers.rs  types.rs  usage.rs
src/models/: access_review.rs  api_key.rs  api_key_gen.rs  attribute_filter.rs  audit_log.rs  conversation.rs  domain_verification.rs  dynamic_provider.rs  mod.rs  model_pricing.rs  oauth_authorization_code.rs  org_rbac_policy.rs  org_sso_config.rs  organization.rs  prefixed_id.rs  project.rs  prompt.rs  ranking_options.rs  scim.rs  service_account.rs  skill.rs  sso_group_mapping.rs  team.rs  template.rs  usage.rs  user.rs  validators.rs  vector_store.rs
src/observability/: metrics.rs  mod.rs  tracing_init.rs
src/pricing/: mod.rs
src/providers/: aws.rs  circuit_breaker.rs  convert_utils.rs  error.rs  fallback.rs  health_check.rs  image.rs  mod.rs  registry.rs  response.rs  retry.rs  test_utils.rs
src/retention/: mod.rs  worker.rs
src/routes/: api.rs  auth.rs  execution.rs  health.rs  mod.rs  oauth_public.rs  ws.rs
src/routing/: mod.rs  resolver.rs
src/runtimes/: microsandbox.rs  mod.rs  opensandbox.rs  passthrough.rs
src/scim/: error.rs  filter.rs  filter_to_sql.rs  mod.rs  patch.rs  types.rs
src/secrets/: aws.rs  azure.rs  gcp.rs  mod.rs  vault.rs
src/services/: access_reviews.rs  api_keys.rs  audit_logs.rs  background_executor.rs  compactor.rs  container_session.rs  containers.rs  conversations.rs  document_processor.rs  domain_verifications.rs  file_search.rs  mod.rs  (+37 more)
ui/: eslint.config.js  index.html  openapi-ts.config.ts  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.app.json  vite.config.ts
(+1149 files in other folders)
